--- a/html/index.html
+++ b/html/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style.css">
     <title>IMAGE CASE</title>
 </head>
+
 <body>
     <header>
         <nav>
             <div class="nav-logo">
-                AKKA  PHOTOS
+                AKKA PHOTOS
             </div>
             <div class="nav-btns">
                 <a href="/html/login.html"><button class="nav-login">LOGIN</button></a>
-                <a href="/html/signup.html"><button class="nav-signup">SIGNUP</button></a>                   
-                <div class="nav-profile"><img class="nav-profile-img" src="/img/person_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="" srcset=""></div>
+                <a href="/html/signup.html"><button class="nav-signup">SIGNUP</button></a>
+                <a href="/html/profile.html">
+                    <div class="nav-profile"><img class="nav-profile-img"
+                            src="/img/person_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="" srcset=""></div>
+                </a>
             </div>
         </nav>
     </header>
@@ -26,4 +31,5 @@
         nijer bapar a likhte hobe
     </footer>
 </body>
+
 </html>
