--- a/html/profile.html
+++ b/html/profile.html
@@ -37,6 +37,12 @@
             <div class="uploaded-img">
 
             </div>
+            <div class="uploaded-img">
+
+            </div>
+            <div class="uploaded-img">
+
+            </div>
             
         </div>
     </div>
