--- a/html/profile.html
+++ b/html/profile.html
@@ -30,22 +30,18 @@
             <label for="input-img">UPLOAD IMAGE</label>
             <input id="input-img" type="file" accept="image/jpeg, image/png, image/jpg">
 
-            <button class="submit-img">SUBMIT</button>
 
         </div>
         <div class="proifle-images">
-            <div class="uploaded-img">
 
-            </div>
-            <div class="uploaded-img">
-
-            </div>
-            <div class="uploaded-img">
-
-            </div>
-            
         </div>
+
     </div>
+    </div>
+
+
+
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
